--- a/StepMeter/StepMeter.Android/Properties/AndroidManifest.xml
+++ b/StepMeter/StepMeter.Android/Properties/AndroidManifest.xml
@@ -3,4 +3,7 @@
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
     <application android:label="StepMeter.Android" android:theme="@style/MainTheme"></application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-feature android:name="android.hardware.sensor.stepcounter" android:required="true"/>
+    <uses-feature android:name="android.hardware.sensor.stepdetector" android:required="true"/>
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 </manifest>
